<resources>
    <string name="app_name">Sarathi</string>
    <string name="sarathi">Sarathi</string>
    <string name="about_us">About Us</string>
    <string name="ExtendedWelcome">Welcome to the world of\n\t\t\t\t\t\t\t Shri Krishna</string>
    <string name="quote_of_the_day">Quote of the day</string>
    <string name="Talk_krishna">Talk To Kanha</string>
    <string name="audio">\tAudio\ntherapy</string>
    <string name="mediYoga">Meditation\n\t\t\t&amp;\tYoga</string>
    <string name="activityProgress">Activity\nProgress</string>
    <string name="selfhelpB">Self help\n\t\tBooks</string>
    <string name="start_talking">Message</string>
    <string name="game1text">Math is Fun! Games</string>
    <string name="game2text">Mind Games</string>
    <string name="game3text">Smart Brain Games</string>
    <string name="game4text">Poki Games!</string>
    <string name="game5text">Fast Games</string>
    <string name="gamestitle">Games</string>
    <string name="How">HOW TO DO IT?\n\n</string>
    <string name="caution">CAUTION:\n\n</string>
    <string name="Virabhadrasana">VIRBHADRASANA\n(The Warrior Pose)</string>
    <string name="VirabhadrasanaD">It requires focus and steady breathing.</string>
    <string name="VirbhadrasanaH">1. While on two feet, spread your legs wide, turn your hips to one side, turn your ankles to the side you are facing.\n2. Bend the front leg to a 90-degree angle.\n3. Stretch your arms to your sides and breathe in deeply and evenly for 10 seconds.</string>
    <string name="VirbhadrasanaC">Make sure your ankles are always in line with your knee, breathe evenly and do not hold the pose for long periods if your body is shaking. Ensure you only do this pose under  the supervision of a professional.</string>
    <string name="VirabhadrasanaLink">https://youtu.be/Mn6RSIRCV3w</string>
    <string name="Natarajasana">NATARAJASANA\n(The Dancer\'s Pose).</string>
    <string name="NatarajasanaD">This asana is great for mood balancing.It can be beneficial for those who are fighting depression and anxiety.</string>
    <string name="NatarajasanaH">1. With both legs planted on the ground, bend one knee back; using your arm, grip the ankle.\n2. Slowly keeping a steady posture, lean forward and lift your ankle towards the sky.\n3. Extend your free hand in front of you.\n4. Take 5 deep and even breaths</string>
    <string name="NatarajasanaC">Doing this pose quickly and at an early stage of yoga can be very harmful to your body. Do not attempt this without supervision. Do not do this if you have any injuries to the knees or ankles.</string>
    <string name="NatarajasanaLink">https://youtu.be/TXNgRNsqcPo</string>
    <string name="Vriksasana">VRIKSASANA\n(The Tree Pose)</string>
    <string name="VriksasanaD">This asana is very basic and helps improve your sense of self and centres your body and mind.</string>
    <string name="VriksasanaH">1. While standing straight with ankles flat on the ground, lift one leg and place the ankle on the inner part of your opposite thigh.\n2. This will bend your knee outward.\n3. Balance and stretch your arms skyward and connect your palms.</string>
    <string name="VriksasanaC">Ensure you keep your body straight and try balancing while breathing evenly.</string>
    <string name="VriksasanaLink">https://youtu.be/Fr5kiIygm0c</string>
    <string name="Anjaneyasana">ANJANEYASANA\n(The High Lunge)</string>
    <string name="AnjaneyasanaD">Doing the crescent variation of this exercise is known to help improve your blood flow, calm your mind.</string>
    <string name="AnjaneyasanaH">1. While standing, lunge one leg forward.\n2. Bend the front knee, make sure your knee is in line with your ankle, stretch your back leg.\n3. Press your ankle flat against the ground on both ankles.\n4. Raise your arms to the sky and connect your palms.\n5. Breathe in deeply and breathe out in an even flow.\n6. Repeat 5 times per leg.</string>
    <string name="AnjaneyasanaC">Ensure your knee is in line with your ankle and your front knee is at a 90-degree angle. If you perform it incorrectly, it could harm your joints.</string>
    <string name="AnjaneyasanaLink">https://youtu.be/zaongQlYTto</string>
    <string name="Garudasana">GARUDASANA\n(The Eagle Pose)</string>
    <string name="GarudasanaD">This pose requires you to breathe while holding your body in balance. It helps prevent anxiety attacks while improving your focus.</string>
    <string name="GarudasanaH">1. Breathe in deep, shift the weight of your body onto one leg.\n2. Slowly wrap one leg around the other.\n3. Sink your hips and gently bend your knees.\n4. Keep your ankle flat on the ground.\n5. Keep your breathing even and slow.\n6. Wrap one arm around the other at the elbows and wrists.</string>
    <string name="GarudasanaC">Do not perform this pose alone, it can require balance and a lot of focus, ensure you do each part of the pose slowly and if you feel any pain, stop and restart after a break.</string>
    <string name="GarudasanaLink">https://youtu.be/FTWFM-lL5jQ</string>
    <string name="AdhoMukhaVrksasana">Adho Mukha Vrksasana (Handstand)</string>
    <string name="AdhoMukhaVrksasanaD">This is not a pose for beginners, this asana is a basic handstand.</string>
    <string name="AdhoMukhaVrksasanaH">1. While standing with your ankles flat on the ground, bend forward to place your palms to the ground. Ensure your back is straight as are your knees.\n2. Begin to gently shift your weight onto your arms.\n3. Slowly begin to lift one leg straight up above your hips.\n4. Then brace your weight and do it for the second leg.</string>
    <string name="AdhoMukhaVrksasanaC">Ensure your body remains straight throughout, keep your legs in line with your hips and ensure a professional is present with you. Do not try this alone.</string>
    <string name="AdhoMukhaVrksasanaLink">https://youtu.be/VrenTA2IFjI</string>
    <string name="Chakrasana">CHAKRASANA\n(The Circle Pose)</string>
    <string name="ChakrasanaD">It helps your calmness and focus.</string>
    <string name="ChakrasanaH">1. While standing, place your arms high above your head.\n2. Keeping your back straight, bend backwards.\n3. Do this slowly and till your palms reach the floor behind you.\n4. Keep your ankles firmly on the ground.</string>
    <string name="ChakrasanaC">Remember to do this with a professional present as it can be dangerous. Do not make rigid and fast movements and keep your breath on the same track as your body movements.</string>
    <string name="ChakrasanaLink">https://youtu.be/DPiW5pN1jQM</string>
    <string name="Vajrasana">VAJRASANA\n(The Meditative Pose)</string>
    <string name="VajrasanaD">It improves focus, calmness and digestion.</string>
    <string name="VajrasanaH">1. Slowly, begin by sitting on your knees, stretch your ankles outward, bring your thighs and calves together.\n2. Then place your palms on your knees.\n3. Breathe in and out deeply for 30 seconds to a minute.</string>
    <string name="VajrasanaC">This is a fairly basic yoga pose, ensure you keep an eye on your knees and ankles, if they hurt, stretch them out. Do not do this pose for too long at one time as it can affect the blood circulation in your legs.</string>
    <string name="VajrasanaLink">https://youtu.be/82p0aGNJSF4</string>
    <string name="Padmasana">PADMASANA\n(The Lotus Pose)</string>
    <string name="PadmasanaD">This helps your digestion, spinal strength and improves calmness of the mind and also your mood. It helps keep your anxiety and depression at bay.</string>
    <string name="PadmasanaH">1. While sitting cross-legged, gently lift one ankle above your opposite thigh.\n2. Place it as close to the hip as possible, do the same with the other ankle.\n3. Place your palms on your knees, keep your back straight.\n4. Breathe evenly for 30 seconds.</string>
    <string name="PadmasanaC">If you cannot complete the pose, try slowly and to the extent you can. Do not force this asana, it may harm your body physically.</string>
    <string name="PadmasanaLink">https://youtu.be/krB0b6ZYGLk</string>
    <string name="Savasana">SAVASANA\n(The Dead Body Pose)</string>
    <string name="SavasanaD">This asana is similar to lying down to take a nap. It is extremely easy to do.</string>
    <string name="SavasanaH">1. Lay flat on the ground, stretch your legs out.\n2. Stretch your arms beside you and let your palms face skyward.\n3. Close your eyes, maintain even breathing while your focus wanders around you.\n4. Listen to the sounds and continue breathing for 5 minutes.</string>
    <string name="SavasanaC">Ensure you are aware of your surroundings and keep your eyes closed. Do not fall asleep during this asana.</string>
    <string name="SavasanaLink">https://youtu.be/1VYlOKUdylM</string>
    <string name="AltNosB">ALTERNATE NOSTRIL BREATHING</string>
    <string name="AltNosBD">It balances the nervous system and reduces the stress.It lowers blood pressure as well as improves breathing.</string>
    <string name="AltNosBH">1. Position your right hand by bending your pointer and middle fingers into your palm, leaving your thumb, ring finger, and pinky extended. This is known as Vishnu mudra in yoga.\n2. Close your eyes or softly gaze downward.\n3. Inhale and exhale to begin.\n4. Close off your right nostril with your thumb.\n5. Inhale through your left nostril.\n6. Close off your left nostril with your ring finger.\n7. Open and exhale through your right nostril.\n8. Inhale through your right nostril.\n9. Close off your right nostril with your thumb.\n10. Open and exhale through your left nostril.\n11. Inhale through your left nostril.</string>
    <string name="AltNosBT">Try to do five minutes of alternate nostril breathing per day to reap the most benefits.</string>
    <string name="AltNosBLink">https://youtu.be/G8xIEzX40bA</string>
    <string name="BellyB">BELLY BREATHING</string>
    <string name="BellyBD">It helps to reduce stress and anxiety.Try to do it in a comfortable and quiet place such as sitting on chair or sitting cross-legged.</string>
    <string name="BellyBH">1. Place one hand on your upper chest and the other hand on your belly, below the ribcage.\n2. Allow your belly to relax, without forcing it inward by squeezing or clenching your muscles.\n3. Breathe in slowly through your nose. The air should move into your nose and downward so that you feel your stomach rise with your other hand and fall inward (toward your spine).\n4.Exhale slowly through slightly pursed lips. Take note of the hand on your chest, which should remain relatively still.</string>
    <string name="BellyBT">Try to do belly breathing 3 times a day for 10 minutes.</string>
    <string name="BellyBLink">https://youtu.be/wai-GIYGMeo</string>
    <string name="BoxB">BOX BREATHING</string>
    <string name="BoxBD">It helps to slow down your breathing. It works by distracting your mind as you count to four, calming your nervous system, and decreasing stress in your body.</string>
    <string name="BoxBH">1. Exhale to a count of four.\n2. Hold your lungs empty for a four-count.\n3. Inhale to a count of four.\n4. Hold the air in your lungs for a count of four.\n5. Exhale and begin the pattern anew.</string>
    <string name="BoxBT">Do box breathing several times a day as needed to calm your nerves and relieve stress.</string>
    <string name="BoxBLink">https://youtu.be/tEmt1Znux58</string>
    <string name="B487">4 7 8 BREATHING</string>
    <string name="B487D">It is also called the relaxing breath,acts as a natural tranquilizer for the nervous system.</string>
    <string name="productive_utilization_of_free_time_can_aid_in_refocusing_one_s_attention_nengaging_in_games_can_be_an_effective_means_of_utilizing_that_time_and_rejuvenating_oneself">Productive utilization of free time can aid in refocusing one\'s attention.\nEngaging in games can be an effective means of utilizing that time and rejuvenating oneself.</string>
</resources>